Fixing the Bug of Returning Company Employees. (Returning the list of employees in CompanyDetailsResponse, not just the first one available)